--- a/ros_computer_msgs/CMakeLists.txt
+++ b/ros_computer_msgs/CMakeLists.txt
@@ -4,6 +4,7 @@ project(ros_computer_msgs)
 find_package(catkin REQUIRED COMPONENTS message_generation)
 
 add_message_files(FILES Process.msg CPUUsage.msg)
+generate_messages()
 
 catkin_package(
  CATKIN_DEPENDS message_runtime
