--- a/ros_computer_msgs/CMakeLists.txt
+++ b/ros_computer_msgs/CMakeLists.txt
@@ -3,7 +3,7 @@ project(ros_computer_msgs)
 
 find_package(catkin REQUIRED COMPONENTS message_generation)
 
-add_message_files(FILES Process.msg CPUUsage.msg)
+add_message_files(FILES Process.msg CPUUsage.msg HardDrives.msg Drive.msg)
 generate_messages()
 
 catkin_package(
